--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "start": "nodemon backend/server.js"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.2.5",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -21,8 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.0",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer": "^6.9.0"
   },
   "keywords": [],
   "author": "",
